--- a/pages/notas/notas.css
+++ b/pages/notas/notas.css
@@ -4,7 +4,7 @@ margin: 0;
  box-sizing: border-box;
 }
 header{
-    background-color: rgb(236, 236, 236);
+    background-color: rgb(255, 255, 255);
     
 }
 .container_header{
@@ -30,7 +30,7 @@ header{
 .user{
     width: 100%;
     height: auto;
-    background-color: #ccc;
+    background-color: rgb(236, 236, 236);
 }
 .ContainerUser{
     display: flex;
@@ -72,3 +72,48 @@ header{
     color: #808080;
     font-weight: 100;
 }
+
+.container{
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+}
+
+.sidebar{
+    display: block;
+    background-color: #3358DD;
+    height: 100vh;
+    width: 300px;
+}
+
+.menus_sideBar ul li{
+    color: #fff;
+    font-size: 17px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.menus_sideBar ul a{
+    text-decoration: none;
+
+}
+.menus_sideBar ul li{
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    transition: 0.8s;
+
+}
+
+.menus_sideBar ul li:hover{
+    background: white;
+    color: #3358DD;
+}
+
+.activeMenu{
+    color: #fffb00 !important;
+}
+
+main{
+    width: calc(100% -300px);
+    background-color: rgb(255, 255, 255);
+}
+
