--- a/pages/notas/notas.css
+++ b/pages/notas/notas.css
@@ -83,7 +83,7 @@ header{
     display: block;
     background-color: #3358DD;
     height: 100vh;
-    width: 300px;
+    width: 230px;
 }
 
 .menus_sideBar ul li{
@@ -111,9 +111,43 @@ header{
 .activeMenu{
     color: #fffb00 !important;
 }
+.activeMenu:hover {
+    color: #3358DD !important;
+}
 
 main{
     width: calc(100% -300px);
     background-color: rgb(255, 255, 255);
+    margin: 0 auto;
 }
 
+.Container_titleNotas{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.Container_titleNotas img{
+    width: 180px;
+    padding: 20px;
+}
+
+.traco{
+    height: 1px;
+    width: 300px;
+    background-color: #C4C4C4;
+    margin-top: 10px;
+}
+
+.titleNotas{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+
+.titleNotas h1{
+    font-size: 25px;
+    color: #808080;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
