--- a/pages/notas/notas.css
+++ b/pages/notas/notas.css
@@ -76,14 +76,14 @@ header{
 .container{
     display: flex;
     flex-direction: row;
+    width: 100%;
     height: 100%;
 }
 
 .sidebar{
-    display: block;
     background-color: #3358DD;
     height: 100vh;
-    width: 230px;
+    width: 15%;
 }
 
 .menus_sideBar ul li{
@@ -116,7 +116,7 @@ header{
 }
 
 main{
-    width: calc(100% -300px);
+    max-width: 85%;
     background-color: rgb(255, 255, 255);
     margin: 0 auto;
 }
@@ -150,4 +150,82 @@ main{
     color: #808080;
     font-family: Arial, Helvetica, sans-serif;
 
+}
+
+.Container_notas{
+    width: 100%;
+    margin-top: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    
+    
+}
+
+.blocoAtividade{  
+background: #FFFFFF;
+box-shadow: 2px 4px 22px rgba(0, 0, 0, 0.25);
+border-radius: 13px;
+display: flex;
+justify-content: center;
+flex-direction: column;
+width: 240px;
+margin: 20px;
+
+}
+.Cont_titleAtividade{
+    background: #33DD77;
+border-radius: 10px;
+}
+
+.Cont_titleAtividade h3{
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+    padding: 10px;
+    font-size: 20px;
+    font-family: arial;
+
+}
+
+.cont_Pontos{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 20px;
+    text-align: center;
+}
+
+.PontosPossiveis h4{
+    color: #3358DD;
+    text-transform: uppercase;
+    font-size: 17px;
+    font-family: arial;
+}
+
+.PontosPossiveis h3{
+    color:#3358DD ;
+    text-transform: uppercase;
+    font-size: 40px;
+    font-family: arial;
+
+}
+
+.traco_veritical{
+    height: 50px;
+    width: 2px;
+    background-color: #dfdfdf;
+}
+
+.suaNota h4{
+    color: #FF7E64;
+    text-transform: uppercase;
+    font-size: 17px;
+    font-family: arial;
+}
+
+.suaNota h3{
+    color: #FF7E64;
+    text-transform: uppercase;
+    font-size: 40px;
+    font-family: arial;
 }
