--- a/pages/inicial/inicial.css
+++ b/pages/inicial/inicial.css
@@ -121,110 +121,27 @@ main{
     margin: 0 auto;
 }
 
-.Container_titleNotas{
+.bannerPrincipal{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.Container_titleNotas img{
-    width: 180px;
-    padding: 20px;
-}
 
-.traco{
-    height: 1px;
-    width: 300px;
-    background-color: #C4C4C4;
-    margin-top: 10px;
-}
-
-.titleNotas{
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.titleNotas h1{
-    font-size: 25px;
-    color: #808080;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-.Container_notas{
-    width: 100%;
-    margin-top: 10px;
-    display: flex;
-    flex-wrap: wrap;
+.bannerPrincipal  img{
+    width: 900px;
+    margin-top: 20px;
     
 }
 
-.blocoAtividade{  
-background: #FFFFFF;
-box-shadow: 2px 4px 22px rgba(0, 0, 0, 0.25);
-border-radius: 13px;
-display: flex;
-justify-content: center;
-flex-direction: column;
-width: 240px;
-margin: 20px;
-
-}
-.Cont_titleAtividade{
-    background: #33DD77;
-border-radius: 10px;
-}
-
-.Cont_titleAtividade h3{
-    text-transform: uppercase;
-    color: white;
-    text-align: center;
-    padding: 10px;
-    font-size: 20px;
-    font-family: arial;
-
-}
-
-.cont_Pontos{
+.banners{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 20px;
-    text-align: center;
-}
-
-.PontosPossiveis h4{
-    color: #3358DD;
-    text-transform: uppercase;
-    font-size: 17px;
-    font-family: arial;
-}
-
-.PontosPossiveis h3{
-    color:#3358DD ;
-    text-transform: uppercase;
-    font-size: 40px;
-    font-family: arial;
+    justify-content: center;
+    flex-direction: row;
 
 }
 
-.traco_veritical{
-    height: 50px;
-    width: 2px;
-    background-color: #dfdfdf;
-}
-
-.suaNota h4{
-    color: #FF7E64;
-    text-transform: uppercase;
-    font-size: 17px;
-    font-family: arial;
-}
-
-.suaNota h3{
-    color: #FF7E64;
-    text-transform: uppercase;
-    font-size: 40px;
-    font-family: arial;
+.banners img{
+    width: 275px;
+    margin: 15px 20px;
+    
 }
