--- a/pages/Detalhes_Notas/notas.css
+++ b/pages/Detalhes_Notas/notas.css
@@ -161,65 +161,71 @@ main{
     
 }
 
-.blocoAtividade2{  
+.blocoAtividade{  
 background: #FFFFFF;
 box-shadow: 2px 4px 22px rgba(0, 0, 0, 0.25);
 border-radius: 13px;
 display: flex;
-justify-content: space-around;
-width: auto;
+justify-content: center;
+flex-direction: column;
+width: 240px;
 margin: 20px;
-padding: 10px;
+
+}
+.Cont_titleAtividade{
+    background: #33DD77;
+border-radius: 10px;
 }
 
-.img_notas img{
-    width: 70%;
+.Cont_titleAtividade h3{
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
     padding: 10px;
-}
-
-
-.traco_nota{
-    height: 1px;
-    width: 200px;
-    background-color: #C4C4C4;
-    margin-top: 10px;
-}
-
-.title_verNota h1{
     font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #b1b1b1;
-    
+    font-family: arial;
+
 }
 
-
-.title_verNota{
+.cont_Pontos{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    margin-right: 30px;
+    padding: 15px 20px;
+    text-align: center;
 }
 
-.title_verNota button{
-    background-color: #3358DD;
-    padding: 10px;
-    margin-top: 10px;
-    width: 150px;
-    color: #fff;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 0.5s;
+.PontosPossiveis h4{
+    color: #3358DD;
+    text-transform: uppercase;
     font-size: 17px;
+    font-family: arial;
 }
 
-
-.title_verNota button:hover{
-    background-color: #1539bd;
+.PontosPossiveis h3{
+    color:#3358DD ;
+    text-transform: uppercase;
+    font-size: 40px;
+    font-family: arial;
 
 }
 
+.traco_veritical{
+    height: 50px;
+    width: 2px;
+    background-color: #dfdfdf;
+}
 
+.suaNota h4{
+    color: #FF7E64;
+    text-transform: uppercase;
+    font-size: 17px;
+    font-family: arial;
+}
 
-
+.suaNota h3{
+    color: #FF7E64;
+    text-transform: uppercase;
+    font-size: 40px;
+    font-family: arial;
+}
