--- a/professor/index.css
+++ b/professor/index.css
@@ -10,7 +10,7 @@ html,
 body {
     height: 100%;
     font-family: "Roboto", sans-serif;
-    overflow: hidden;
+    height: auto;
 }
   
 a {
@@ -104,8 +104,9 @@ button {
 
 .sidebar{
     background-color: #3358DD;
-    min-height: 100vh;
     width: 15%;
+
+
 }
 
 .menus_sideBar ul i{
@@ -175,8 +176,120 @@ button {
 }
 
 /* adicionar o main aqui! */
+main{
+    width: 100%;
+}
+.title-container{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 20px 0px 0px 50px;
+}
+.title-atividade{
+    text-align: center;
+}
+.title-container .title-atividade h2{
+    color: red;
+    font-weight: 500;
+    font-size: 1.9rem;
+}
+.title-container .title-atividade h2 span{
+    font-weight: 800;
+}
+.title-container .title-atividade h3{
+    color: #808080;
+    font-weight: 500;
+    font-weight: 1.7rem;
+}
+.title-container .title-atividade small {
+    font-size: 20px;
+    color: #33DD77;
+}
+.button-editar button{
+    background-color: #3358DD;
+    width: 140px;
+    height: 40px;
+    color: #fff;
+    border-radius: 7px;
+    cursor: pointer;
+    outline: none;
+    font-size: 17px;
+    transition: all ease 0.6s;
+}
+
+.button-editar button:hover{
+    background-color: #6083ff;
+}
+
+.traco{
+    width: 100%;
+    height: 0.5px;
+    border: 0.5px solid #c6c6c6;
+    margin-top: 50px;
+    margin-bottom: 50px;
+
+}
+.container-perg{
+    margin-top: 30px;
+   
+}
+.pergunta{
+    margin: 0 auto;
+    width: 80%;
+
+}
+.sum-pergunta{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.sum-pergunta h1{
+    font-family: 'Roboto';
+font-style: normal;
+font-weight: 600;
+font-size: 30px;
+line-height: 35px;
+text-transform: capitalize;
+
+color: #3358DD;
+}
+.title-pergunta h5{
+    font-style: normal;
+font-weight: 500;
+font-size: 19px;
+line-height: 24px;
+text-align: justify;
+
+color: #6D6D6D;
+}
+
+.pergunta ol{
+    /* list-style: upper-alpha; */
+    margin-top: 30px;
+}
+
+.pergunta ol li{
+    margin-top: 20px;
+    font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 23px;
+text-align: justify;
+text-transform: capitalize;
+
+color: #6D6D6D;
+}
 
 
+footer{
+    background-color: #ffffff;
+    height: 30px;
+    width: 100%;
+    text-align: center;
+    margin-top: 50px;
+}
 
 
 
